3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

plugins/cfpython/cfpython.c: fix invalid reference management. Don't return NULL but Py_None.
Ryo 2005-12-04

Fix bug #1372194 (stairways now block movement).
--
random_maps/exit.c: In unblock_exits() check correct field move_block to find
   blocking exits.
Andreas Kirschbaum 2005-12-03

server/apply.c: In move_apply() properly decrement recursion counter.
Andreas Kirschbaum 2005-12-02

server/spell_attack.c: Add some missing P_IS_ALIVE checks - these weren't
  needed in the past because living objects would block movement -
  with new movement code, isn't always the case.
server/time.c: Fix player movers so that if the victim doesn't have any
  movement type, we move it.
MSW 2005-11-30

common/time.c: In move_teleporter() and move_player_mover() do not affect DMs
   if FLAG_WIZPASS is set.
common/object.c: In check_move_on() do not affect DMs if FLAG_WIZPASS is set.
   This prevents DMs from triggering traps when walking over them.
Andreas Kirschbaum 2005-11-30

common/map.c: Replace code with OB_TYPE_MOVE_BLOCK - effectively same as what
  it was.
include/define.h: Update OB_TYPE_MOVE_BLOCK so that spaces that don't block
  any type of movement doesn't block objects that also don't have movement.
  This fixes cases of gates not pushing objects off them.
server/c_party.c: Remove double use of ->next pointer/loop in 
    confirm_party_password() - fixes crash and likely makes setting party
    password work more reliably.
MSW 2005-11-29

common/object.c: Fix wrong comparision operator in free_object2() to make
   monsters drop loot again.
Andreas Kirschbaum 2005-11-28
