@@ -17,6 +17,15 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+New plugin property for player: marked item, added Python wrapper.
+Modified files:
+ include/plugin.h
+ plugins/cfpython/cfpython_object.c
+ plugins/cfpython/include/cfpython_object_private.h
+ plugins/common/include/plugin_common.h
+ plugins/common/plugin_common.c
+ server/plugins.c
+
 plugins/cfpython/cfpython.c: fix invalid reference management. Don't return NULL but Py_None.
 Ryo 2005-12-04
 
